--- a/.github/workflows/daily_crawl.yml
+++ b/.github/workflows/daily_crawl.yml
@@ -1,31 +1,28 @@
-name: Daily Tefas Crawler
+name: Portfoy Takip Botu
 
 on:
   schedule:
-    - cron: '30 18 * * 1-5' # Hafta içi her gün TSİ 21:30
+    - cron: '0 19 * * 1-5' # Hafta içi her gün TSİ 22:00
   workflow_dispatch:
 
 jobs:
-  build:
+  run_bot:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Kodu Cek
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10' # <--- Burası çok kritik, tam olarak böyle olmalı
+      - name: Python Kur (3.10 Sarti)
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install tefas-crawler pandas yfinance requests
+      - name: Kutuphaneleri Yukle
+        run: |
+          python -m pip install --upgrade pip
+          pip install tefas-crawler pandas yfinance requests
 
-    - name: Run crawler
-      env:
-        DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-      run: python main.py
+      - name: Botu Calistir
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        run: python main.py
